reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_nested_external.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithNestedExternal"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithNestedExternal"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithNestedExternal",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "reflectapi_demo::tests::test_lib::TestStructNested"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::test_lib::TestStructNested",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithNestedExternal",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "reflectapi_demo::tests::test_lib::TestStructNested"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::test_lib::TestStructNested",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
