reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_transform_array.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithTransformArray"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithTransformArray"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithTransformArray",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "u8"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::array::Array",
        "description": "Fixed-size Array",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "N"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "arguments": [
            {
              "name": "T"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithTransformArray",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "u8"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::array::Array",
        "description": "Fixed-size Array",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "N"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "arguments": [
            {
              "name": "T"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
